# keyframe

./: .env.example  .gitignore  README.md  install-skill.sh  pyproject.toml
keyframe/: __init__.py  cli.py  dedupe.py  evidence.py  frames.py  manifest.py  merge.py  scoring.py  transcript.py  visual.py
keyframe/pipeline/: __init__.py  config.py  context.py  contracts.py  orchestrator.py  qa_targets.py  snapshotters.py  trace.py
scripts/: acceptance_replay.py  capture_fixture.py  compare_ocr_backends.py
skill/: SKILL.md
skill/codex/: SKILL.md
tests/postmortem/: checker.py  test_allocation.py  test_candidate_contracts.py  test_clip_oversegment.py  test_dedupe.py  test_merge.py  test_pipeline.py  test_pipeline_orchestrator.py  test_pipeline_trace.py  test_qa_fixtures.py  test_rescue.py
