[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyframe"
version = "0.3.2"
description = "Extract key frames and transcripts from video files using CLIP, Florence-2, and Whisper"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "opencv-python",
    "torch",
    "open-clip-torch",
    "transformers>=4.50",
    "scikit-learn",
    "numpy",
    "pillow",
    "openai-whisper",
    "scenedetect[opencv]",
    "pyobjc-framework-Vision; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle",
    "paddleocr",
]

[project.scripts]
keyframe = "keyframe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["keyframe"]

[tool.hatch.build.targets.wheel.force-include]
"skill" = "skill"

[tool.pytest.ini_options]
markers = [
    "slow: opt-in QA fixture tests that run full local recordings",
]
